nginx/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    k8s-app: nginx
  ports:
  - port: 80
    targetPort: 80
