nginx/traefik-ingress-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: web
    port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-ui
  namespace: kube-system
spec:
  rules:
  - host: web.traefik.com
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-ingress-ui
          servicePort: web
